[FIX] footer cut off

--- a/app/static/css/custom.css
+++ b/app/static/css/custom.css
@@ -140,13 +140,14 @@
 */
 
 html {
-  height: 100%;
+  display: flex;
+  min-height: 100%;
 }
 
 body {
-  height: 100%;
   display: flex;
   flex-direction: column;
+  flex-grow: 1;
 }
 
 /*
@@ -201,7 +202,7 @@ li.active-nav:hover > a {
 */
 .sidebar-offcanvas {
   padding: 0;
-  height: 100%;
+  flex-grow: 1;
 }
 
 .sidebar-nav {
@@ -237,6 +238,8 @@ body .container {
 
 body .container .container-wrapper {
   height: 100%;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .container-main {
